CarServiceImpl, CarController (bugFixes)

--- a/src/webapp/WEB-INF/pages/index.html
+++ b/src/webapp/WEB-INF/pages/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
 <div>
-    <th:block th:each="msg : ${messages}">
-        <h1 th:text="${msg}"></h1>
-    </th:block>
+    <a href="http://localhost:8080/cars">Ссылка на Cars, для удобства</a>
 </div>
 </body>
 </html>
